--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ h2 {
 }
 
 .header {
-    background: #4caf50;
+    background: #01A9DB;
     color: #fff;
     position: fixed;
     top: 0;
@@ -53,7 +53,7 @@ h2 {
     position: absolute;
     top: 3.5em;
     padding: 1em;
-    background: #4caf50;
+    background: #01A9DB;
     height: 100%;
     width: 10em;
     transform: translate3d(0, 0, 0);
